# AML_NN_DEMO

./: README.md
Android/: Readme.md
Android/Amlogic/face_detect_v4/: Readme.md
Android/Amlogic/hand_gesture/: Readme.md
Android/Amlogic/person_detect/: README.md
Android/Amlogic/person_detect/person_detect_source_code/: build.gradle
Android/Amlogic/posenet/: Readme.md
Android/Amlogic/sound_classification/: Readme.md
Android/Google/Image_Classify_nnapi_baseon_camera/: Readme.md
Android/Google/Object_Detect/: Readme.md
Linux/: CMakeLists.txt  README-C.md  Readme-cn.md  make_nnsdk_32.sh  make_nnsdk_64.sh  make_nnsdk_adla_32.sh  make_nnsdk_vsi_32.sh  make_nnsdk_vsi_64.sh  make_total.sh  readme-en.md  readme.md
Linux/amlnnsdk/: release.md
Linux/amlnnsdk/include/: nn_sdk.h
Linux/cmake/: arm32_toolchain.cmake  arm64_toolchain.cmake
Linux/demo/A311X2/face_landmark5/: CMakeLists.txt
Linux/demo/A311X2/image_classify/: CMakeLists.txt
Linux/demo/A311X2/object_detect_yolov5s/: CMakeLists.txt
Linux/demo/C305X/face_landmark5/: CMakeLists.txt  model_retinaface_postprocess.cpp
Linux/demo/C305X/image_classify/: CMakeLists.txt  main.cpp  model_cls_postprocess.cpp
Linux/demo/C305X/object_detect_yolov5s/: CMakeLists.txt  model_yolov5s_postprocess.cpp
Linux/demo/C308L/image_classify/: CMakeLists.txt  main.cpp
Linux/demo/C308L/object_detect_yolov5s/: CMakeLists.txt  model_yolov5s_postprocess.cpp
Linux/demo/C308X/face_landmark5/: CMakeLists.txt
Linux/demo/C308X/image_classify/: CMakeLists.txt
Linux/demo/adla/: CMakeLists.txt
Linux/demo/adla/aml_face_landmark5/: CMakeLists.txt  main.cpp  model_retinaface_postprocess.cpp
Linux/demo/adla/aml_image_classify/: CMakeLists.txt
Linux/demo/adla/aml_object_detect_yolov5s/: CMakeLists.txt
Linux/demo/vsi/aml_face_landmark5/: CMakeLists.txt
Linux/demo/vsi/aml_image_classify/: CMakeLists.txt
Linux/demo/vsi/aml_object_detect_yolov5s/: CMakeLists.txt
Linux/native_nndemo/demo_classify_c2/: readme.txt
Linux/native_nndemo/demo_classify_c2/example/: CMakeLists.txt  postprocess_util.c
Linux/native_nndemo/demo_classify_c2/model_convert/: cmd_export.sh  dataset.txt
Linux/native_nndemo/demo_face_detect_c3/case/: case_face_det_linux_32  det_retinaface_int8.adla
Linux/native_nndemo/demo_face_detect_c3/example/: CMakeLists.txt
Linux/native_nndemo/demo_face_detect_c3/model_convert/: convert_adla.sh
Linux/native_nndemo/demo_face_detect_t7c/: readme-en.txt  readme.txt
Linux/native_nndemo/demo_face_detect_t7c/case/: case_face_det_android_32
Linux/native_nndemo/demo_face_recognition_c3/case/: case_face_recog_linux_32
Linux/native_nndemo/demo_face_recognition_c3/example/: CMakeLists.txt  main.c
Linux/native_nndemo/demo_face_recognition_t7c/model_convert/: convert_adla.sh
Linux/native_nndemo/demo_obj_det_c2/case/: case_obj_det_linux_32  case_obj_det_linux_64
Linux/native_nndemo/demo_obj_det_c2/example/: CMakeLists.txt  main.c
Linux/scripts/: CMakeLists.txt  arm32_toolchain.cmake  arm64_toolchain.cmake  make_nnsdk_32.sh  make_nnsdk_64.sh  make_total.sh
Linux/source/C305X/face_landmark5/: det_retinaface_be_C305X.nb
Linux/source/C308L/face_landmark5/: CMakeLists.txt
Linux/source/C308L/object_detect_yolov5s/: main.cpp
Linux/source/C308X/face_landmark5/: main.cpp
Linux/source/C308X/image_classify/: utils.cpp
Linux/source/C308X/object_detect_yolov5s/: CMakeLists.txt  main.cpp
Linux/test_case/A311X2/face_landmark5/: aml_a311x2_face_landmark5_32  aml_a311x2_face_landmark5_64  det_retinaface_1e_A311X2.nb
Linux/test_case/A311X2/image_classify/: aml_a311x2_image_classify_32  aml_a311x2_image_classify_64  sdk_mobilenetv1_1e_A311X2.nb
Linux/test_case/A311X2/object_detect_yolov5s/: aml_a311x2_object_detect_yolov5s_32  aml_a311x2_object_detect_yolov5s_64
Linux/test_case/C305X/face_landmark5/: aml_c305x_face_landmark5_32  aml_c305x_face_landmark5_64
Linux/test_case/C305X/image_classify/: aml_c305x_image_classify_32  aml_c305x_image_classify_64  sdk_mobilenetv1_be_C305X.nb
Linux/test_case/C305X/object_detect_yolov5s/: aml_c305x_object_detect_yolov5s_32  aml_c305x_object_detect_yolov5s_64
Linux/test_case/C308L/face_landmark5/: aml_c308l_face_landmark5_32  aml_c308l_face_landmark5_64
Linux/test_case/C308L/image_classify/: aml_c308l_image_classify_32  aml_c308l_image_classify_64  sdk_mobilenetv1_int8_C308L.adla
Linux/test_case/C308L/object_detect_yolov5s/: aml_c308l_object_detect_yolov5s_32  aml_c308l_object_detect_yolov5s_64
Linux/test_case/C308X/face_landmark5/: aml_c308x_face_landmark5_32  aml_c308x_face_landmark5_64
Linux/test_case/C308X/image_classify/: aml_c308x_image_classify_32  aml_c308x_image_classify_64
Linux/test_case/C308X/object_detect_yolov5s/: aml_c308x_object_detect_yolov5s_32  aml_c308x_object_detect_yolov5s_64
Linux/test_case/adla/aml_face_landmark5/: aml_face_landmark5_adla_32  det_retinaface_int8_C308L.adla
Linux/test_case/adla/aml_image_classify/: aml_image_classify_adla_32
Python-IDE/A311D2/palm_detect/: README.md
Python-IDE/common/NN_engine/: 1.md
Python_IDE/A311D2/demo/pose_detect/: readme.md
Python_IDE/A311D2/pose_detect/: README.md
native_nndemo/demo_classify_c2/: readme-en.txt
native_nndemo/demo_classify_c2/case/: case_classify_linux_32  case_classify_linux_64
native_nndemo/demo_classify_c2/example/: main.c
native_nndemo/demo_classify_c2/model_convert/: cmd_import.sh  cmd_quantize.sh
native_nndemo/demo_face_detect_c3/: readme-en.txt  readme.txt
native_nndemo/demo_face_detect_c3/example/: model_retinaface.c
native_nndemo/demo_face_detect_t7c/case/: case_face_det_android_64  det_retinaface_int8.adla
native_nndemo/demo_face_detect_t7c/model_convert/: convert_adla.sh
native_nndemo/demo_face_recognition_c3/: readme-en.txt  readme.txt
native_nndemo/demo_face_recognition_c3/model_convert/: convert_adla.sh
native_nndemo/demo_face_recognition_t7c/: readme-en.txt  readme.txt
native_nndemo/demo_obj_det_c2/: readme-en.txt  readme.txt
native_nndemo/demo_obj_det_c2/model_convert/: cmd_export.sh  cmd_import.sh  cmd_quantize.sh  dataset.txt
(+58 files in other folders)
